[gd_scene load_steps=5 format=3 uid="uid://cwanietim7mq7"]

[ext_resource type="Script" uid="uid://cstnnt7qseoa0" path="res://Scripts/ui.gd" id="1_j6f4f"]
[ext_resource type="Theme" uid="uid://bu1wtqkrwnyj6" path="res://Themes/UITheme.tres" id="1_nyrp3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nyrp3"]
bg_color = Color(0.764845, 0.262711, 0.301311, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.729412, 0.490196, 0.266667, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_j6f4f"]
font_size = 32
font_color = Color(0.881566, 0, 0.124162, 1)
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="ShoeBugLayer" type="CanvasLayer"]
script = ExtResource("1_j6f4f")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nyrp3")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -471.0
offset_top = -283.0
offset_bottom = 283.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("1_nyrp3")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_nyrp3")

[node name="Label" type="Label" parent="Control/Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "ShoeBug"
horizontal_alignment = 1

[node name="Put on" type="Button" parent="Control/Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "Put on"

[node name="Feed" type="Button" parent="Control/Panel/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 8
size_flags_stretch_ratio = 2.74
text = "Feed"

[node name="FoodBar" type="ProgressBar" parent="Control/Panel/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.5
theme_override_styles/fill = SubResource("StyleBoxFlat_nyrp3")
value = 52.0
rounded = true
show_percentage = false

[node name="Water" type="Button" parent="Control/Panel/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 0.0
text = "Water"

[node name="WaterBar" type="ProgressBar" parent="Control/Panel/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.42
value = 82.85
show_percentage = false

[node name="Evolve" type="Button" parent="Control/Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 40
text = "Evolve"

[node name="Sell" type="Button" parent="Control/Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 40
text = "Sell"

[node name="WarningCheese" type="Label" parent="Control/Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -122.5
offset_right = 85.5
offset_bottom = -35.5
grow_horizontal = 2
grow_vertical = 2
text = "Not enough
cheese"
label_settings = SubResource("LabelSettings_j6f4f")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CheeseWarnTimer" type="Timer" parent="."]

[connection signal="button_down" from="Control/Panel/PanelContainer/VBoxContainer/Feed" to="." method="feed"]
[connection signal="pressed" from="Control/Panel/PanelContainer/VBoxContainer/Water" to="." method="givewater"]
[connection signal="button_down" from="Control/Panel/PanelContainer/VBoxContainer/Sell" to="." method="sell"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CheeseWarnTimer" to="." method="_on_cheese_warn_timer_timeout"]
